src/test/ImmutableArray/ImmutableArray.panda
var a := new ImmutableArray<MutableString>()

var b:ImmutableArray<Int> := [1, 2, 3, 4, 5]
b[3] := 5

b[0 .. 2] := [1, 2, 3]

b.append(10)